k8s/deployments/ingress-nginx-argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ae95988b59bb541688eaccd20abf3f13-190465744.us-east-1.elb.amazonaws.com  # Altere para o seu domínio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-service
                port:
                  number: 80
          - path: /sonarqube
            pathType: Prefix
            backend:
              service:
                name: sonarqube-service
                port:
                  number: 9000
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 8080
